--- a/Forecast.ipynb
+++ b/Forecast.ipynb
@@ -106,11 +106,7 @@
       "metadata": {
         "id": "TuZOJIlB1_Bn",
         "colab_type": "code",
-        "outputId": "2a042e73-af73-4f25-cb62-1703550c1447",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 479
-        }
+        "colab": {}
       },
       "source": [
         "tf.compat.v1.reset_default_graph()\n",
@@ -142,47 +138,8 @@
         "                                np.mean(q_samples_sales_[param.name], axis=0),\n",
         "                                np.std(q_samples_sales_[param.name], axis=0)))\n"
       ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING: Logging before flag parsing goes to stderr.\n",
-            "W0717 13:07:38.716151 139977087596416 linear_operator.py:940] Using (possibly slow) default implementation of to_dense.  Converts by self.matmul(identity).\n",
-            "W0717 13:07:38.933471 139977087596416 linear_operator.py:940] Using (possibly slow) default implementation of to_dense.  Converts by self.matmul(identity).\n",
-            "W0717 13:07:39.112634 139977087596416 deprecation.py:323] From /usr/local/lib/python3.6/dist-packages/tensorflow_probability/python/internal/distribution_util.py:1846: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "Building model forecast_model\n",
-            "step 0 -ELBO 15114.6337890625\n",
-            "step 20 -ELBO 4607.3525390625\n",
-            "step 40 -ELBO 3422.296142578125\n",
-            "step 60 -ELBO 3046.76220703125\n",
-            "step 80 -ELBO 2856.23046875\n",
-            "step 100 -ELBO 2723.970703125\n",
-            "step 120 -ELBO 2649.5126953125\n",
-            "step 140 -ELBO 2572.2744140625\n",
-            "step 160 -ELBO 2533.410400390625\n",
-            "step 180 -ELBO 2491.953125\n",
-            "step 200 -ELBO 2450.662841796875\n",
-            "Inferred parameters:\n",
-            "observation_noise_scale: 5.790980815887451 +- 0.026065193116664886\n",
-            "temperature_effect/_weights: [1.3669882] +- [0.04401274]\n",
-            "holiday_effect/_weights: [-9.726252] +- [0.4846987]\n",
-            "month_of_year_effect/_drift_scale: 2.151461362838745 +- 1.791658878326416\n",
-            "day_of_week_effect/_drift_scale: 5.284224033355713 +- 0.20885145664215088\n",
-            "residual/_coefficients: [-0.13859378] +- [0.10961989]\n",
-            "residual/_level_scale: 6.701646327972412 +- 0.07875201851129532\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
